/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package k8s.io.api.networking.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// DNSPolicy describes what domains are allowed to be resolved by a set of Pods
message DNSPolicy {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Specification of the desired behavior for this DNSPolicy.
  // +optional
  optional DNSPolicySpec spec = 2;
}

// DNSPolicyList is a list of DNSPolicy objects.
message DNSPolicyList {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // items is a list of DNSPolicy objects.
  repeated DNSPolicy items = 2;
}

// DNSPolicySpec provides specification for a DNSPolicy
message DNSPolicySpec {
  // podSelector selects pods to which this DNSPolicy object applies. Any pod selected
  // by this policy will only be allowed to resolve domains in the allowedDomains list.
  // Enforcement of this policy against a pod means that the pod can only resolve domains
  // in allowedDomains.
  //
  // An empty podSelector means that this policy should apply to all pods in the namespace.
  // Host network pods are excluded from this policy.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector podSelector = 1;

  // allowedDomains is a list of domains that are resolvable for pods selected by podSelector.
  // Only fully qualified domain names (e.g. www.example.com) and wildcard subdomains (e.g. *.example.com)
  // are supported. Wildcards are only allowed on the left-most parts of the domain, so *.*.example.com
  // is allowed, but example.* is not. Matching domains must have the same number of parts, so
  // foo.bar.example.com does not match for *.example.com.
  // +optional
  repeated string allowedDomains = 2;
}

